sales tax auto updates based on user input

--- a/SalesTaxCalculator/Base.lproj/Main.storyboard
+++ b/SalesTaxCalculator/Base.lproj/Main.storyboard
@@ -46,6 +46,9 @@
                                 <rect key="frame" x="131" y="155.5" width="271" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
+                                <connections>
+                                    <action selector="salesTaxRateChanged:" destination="BYZ-38-t0r" eventType="editingChanged" id="jRq-6h-4Hi"/>
+                                </connections>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="After Tax Rate" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bJ7-PX-B9C">
                                 <rect key="frame" x="12" y="207" width="107" height="21"/>
@@ -92,7 +95,7 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="afterTaxRateComponent" destination="gNU-3o-E8d" id="ZRl-Cw-Qw5"/>
+                        <outlet property="calculatedTaxPrice" destination="gNU-3o-E8d" id="nDH-dY-RJQ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
