--- a/SalesTaxCalculator/Base.lproj/Main.storyboard
+++ b/SalesTaxCalculator/Base.lproj/Main.storyboard
@@ -65,6 +65,9 @@
                                 <rect key="frame" x="317" y="258.5" width="85" height="31"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Calculate"/>
+                                <connections>
+                                    <action selector="taxCalculaterButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="QNq-KY-GAC"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
